--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -20,19 +10,23 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(10px + 10vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+input {
+  border: none;
+  background: #0003;
+  padding: 10px;
+  margin: 10pt;
+  width: 100%;
+  outline: 0;
+  color: #FFF;
+  font-size: 30pt;
+  text-align: center;
+  box-sizing: border-box;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+small {
+  font-size: 10pt;
 }
